objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>BatchUpd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used for Campaign Activity Report.</description>
        <label>BatchUpd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Members__c</fullName>
        <description>Number of Leads and Prospects in the Campaign</description>
        <inlineHelpText>Number of Leads and Prospects in the Campaign</inlineHelpText>
        <label>Number of Members</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Num__c</fullName>
        <inlineHelpText>The stage order within the parent campaign.</inlineHelpText>
        <label>Stage #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Planned,In Progress</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Campaign</fullName>
        <active>true</active>
        <description>A campaign which can contain multiple activity stages-Created by System Admin only</description>
        <label>Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Child</fullName>
        <active>true</active>
        <description>Campaign Child</description>
        <label>Campaign Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Master</fullName>
        <active>true</active>
        <description>Campaign Master</description>
        <label>Campaign Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Stage</fullName>
        <active>true</active>
        <description>Creating stage for a Campaign- Only by the System Administrator and Business Owner</description>
        <label>Campaign Stage</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Campaign_Name_Readonly</fullName>
        <active>true</active>
        <description>Campaign Name should be Read only if profile is not Business Owner</description>
        <errorConditionFormula>ISCHANGED( Name ) &amp;&amp; ($Profile.Name  &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;Business Owner&apos;)</errorConditionFormula>
        <errorMessage>Only Business Owner can change Campaign Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Start_Date_not_Less_Today</fullName>
        <active>true</active>
        <description>Campaign_Start_Date_not_Less_Today</description>
        <errorConditionFormula>IF(OR(ISNEW(),ISCHANGED(StartDate )),StartDate &lt;  TODAY(), false)</errorConditionFormula>
        <errorMessage>Campaign Start Date should not be less than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Should_not_be_less_Start_Date</fullName>
        <active>true</active>
        <description>Campaign End Date Should not be less as Start Date</description>
        <errorConditionFormula>$Profile.Name !=&apos;System Administrator&apos; &amp;&amp;
AND(StartDate &gt;  EndDate,ISNEW())</errorConditionFormula>
        <errorMessage>Campaign End Date should be greater than Campaign Start Date</errorMessage>
    </validationRules>
</CustomObject>